--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,13 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,700;1,400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="./index.css">
     <script defer type = "module" src="./index.ts"></script>
 </head>
 <body>
     <div class="root"></div>
+    <div>
+        <img src="./components/imagen/delete1.png" alt="">
+    </div>
 </body>
 </html>
